Changed routes naming for login, logout, register
