# config/routes.rb
@@ -4,12 +4,12 @@ Rails.application.routes.draw do
   namespace :api do
     namespace :v1 do
       resources :plans
-      post '/signup',          to: 'users#create'
+      post '/register',        to: 'users#create'
       post '/change-password', to: 'users#change_password'
       #  get 'users/index'
       #  delete 'users/:id/destroy'
-      post   '/authenticate',   to: 'authentication#create'
-      delete '/deauthenticate', to: 'authentication#destroy'
+      post   '/login',  to: 'authentication#create'
+      delete '/logout', to: 'authentication#destroy'
     end
   end
 end
